Add several more column options and fix up logic to show/hide columns

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -299,6 +299,18 @@
 										<div class="columnSelectCheckbox" id="datasource_col_checkbox"></div>
 										<div class="columnOptionText">Data Source</div>
 									</div>
+									<div class="columnOptionContainer">
+										<div class="columnSelectCheckbox" id="airframes_col_checkbox"></div>
+										<div class="columnOptionText">Airframes.org</div>
+									</div>
+									<div class="columnOptionContainer">
+										<div class="columnSelectCheckbox" id="fa_modes_link_checkbox"></div>
+										<div class="columnOptionText">FlightAware</div>
+									</div>
+									<div class="columnOptionContainer">
+										<div class="columnSelectCheckbox" id="fa_photo_link_checkbox"></div>
+										<div class="columnOptionText">Photos</div>
+									</div>
 								</div>
 
 								<div id="planes_table">
