Functional select/deselect all checkboxes; Needs optimization

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -231,6 +231,10 @@
 								<div id="column_select_window" class="hidden">
 									<div id="column_select_close_box"></div>
 									<div id="column_select_header">Columns</div>
+									<div class="columnOptionSelectAllContainer">
+										<div class="columnSelectAllCheckbox" id="select_all_column_checkbox"></div>
+										<div class="columnOptionText">Select/Deselect All</div>
+									</div>
 									<div class="columnOptionContainer">
 										<div class="columnSelectCheckbox" id="icao_col_checkbox"></div>
 										<div class="columnOptionText">Icao</div>
