--- a/public_html/index.html
+++ b/public_html/index.html
@@ -318,66 +318,68 @@
 								</div>
 
 								<div id="planes_table">
-									<table id="tableinfo" style="width: 100%">
-										<thead class="aircraft_table_header">
-											<tr>
-												<td id="icao" onclick="sortByICAO();">ICAO</td>
-												<td id="flag" onclick="sortByCountry()"><!-- column for flag image --></td>
-												<td id="flight" onclick="sortByFlight();">  Ident  </td>
-												<td id="registration" onclick="sortByRegistration();">Registration</td>
-												<td id="aircraft_type" onclick="sortByAircraftType();"> Aircraft type</td>
-												<td id="squawk" onclick="sortBySquawk();">Squawk</td>
-												<td id="altitude" onclick="sortByAltitude();">Altitude (<span class="altitudeUnit"></span>)</td>
-												<td id="speed" onclick="sortBySpeed();">Speed (<span class="speedUnit"></span>)</td>
-												<td id="vert_rate" onclick="sortByVerticalRate();">Vertical Rate (<span class="verticalRateUnit"></span>)</td>
-												<td id="distance" onclick="sortByDistance();">Distance (<span class="distanceUnit"></span>)</td>
-												<td id="track" onclick="sortByTrack();">Heading</td>
-												<td id="msgs" onclick="sortByMsgs();">Msgs</td>
-												<td id="seen" onclick="sortBySeen();">Age</td>
-												<td id="rssi" onclick="sortByRssi();">RSSI</td>
-												<td id="lat" onclick="sortByLatitude();">Latitude</td>
-												<td id="lon" onclick="sortByLongitude();">Longitude</td>
-												<td id="data_source" onclick="sortByDataSource();">Data Source</td>
-												<td id="airframes_mode_s_link">Airframes.org</td>
-												<td id="flightaware_mode_s_link">FlightAware</td>
-												<td id="flightaware_photo_link">Photos</td>
-											</tr>
-										</thead>
-										<tbody>
-											<tr id="plane_row_template" class="plane_table_row hidden">
-												<td class="icaoCodeColumn">ICAO</td>
-												<td><img style="width: 20px; height=12px" src="about:blank" alt="Flag"></td>
-												<td>FLIGHT</td>
-												<td>REGISTRATION</td>
-												<td>AIRCRAFT_TYPE</td>
-												<td style="text-align: right">SQUAWK</td>
-												<td style="text-align: right">ALTITUDE</td>
-												<td style="text-align: right">SPEED</td>
-												<td style="text-align: right">VERT_RATE</td>
-												<td style="text-align: right">DISTANCE</td>
-												<td style="text-align: right">TRACK</td>
-												<td style="text-align: right">MSGS</td>
-												<td style="text-align: right">SEEN</td>
-												<td style="text-align: right">RSSI</td>
-												<td style="text-align: right">LAT</td>
-												<td style="text-align: right">LON</td>
-												<td style="text-align: right">DATA_SOURCE</td>
-												<td style="text-align: center">AIRFRAMES_MODE_S_LINK</td>
-												<td style="text-align: center">FLIGHTAWARE_MODE_S_LINK</td>
-												<td style="text-align: center">FLIGHTAWARE_PHOTO_LINK</td>
-											</tr>
-										</tbody>
-									</table>
-									<div>
-										<div class="legend">
-											<div class="legendBox vPosition"></div>
-											<div class="legendTitle">ADS-B</div>
-											<div class="legendBox mlat"></div>
-											<div class="legendTitle">MLAT</div>
-											<div class="legendBox other"></div>
-											<div class="legendTitle">Other</div>
-											<div class="legendBox tisb"></div>
-											<div class="legendTitle">TIS-B</div>
+									<div style="overflow-x: scroll;">
+										<table id="tableinfo" style="width: 100%">
+											<thead class="aircraft_table_header">
+												<tr>
+													<td id="icao" onclick="sortByICAO();">ICAO</td>
+													<td id="flag" onclick="sortByCountry()"><!-- column for flag image --></td>
+													<td id="flight" onclick="sortByFlight();">  Ident  </td>
+													<td id="registration" onclick="sortByRegistration();">Registration</td>
+													<td id="aircraft_type" onclick="sortByAircraftType();"> Aircraft type</td>
+													<td id="squawk" onclick="sortBySquawk();">Squawk</td>
+													<td id="altitude" onclick="sortByAltitude();">Altitude (<span class="altitudeUnit"></span>)</td>
+													<td id="speed" onclick="sortBySpeed();">Speed (<span class="speedUnit"></span>)</td>
+													<td id="vert_rate" onclick="sortByVerticalRate();">Vertical Rate (<span class="verticalRateUnit"></span>)</td>
+													<td id="distance" onclick="sortByDistance();">Distance (<span class="distanceUnit"></span>)</td>
+													<td id="track" onclick="sortByTrack();">Heading</td>
+													<td id="msgs" onclick="sortByMsgs();">Msgs</td>
+													<td id="seen" onclick="sortBySeen();">Age</td>
+													<td id="rssi" onclick="sortByRssi();">RSSI</td>
+													<td id="lat" onclick="sortByLatitude();">Latitude</td>
+													<td id="lon" onclick="sortByLongitude();">Longitude</td>
+													<td id="data_source" onclick="sortByDataSource();">Data Source</td>
+													<td id="airframes_mode_s_link">Airframes.org</td>
+													<td id="flightaware_mode_s_link">FlightAware</td>
+													<td id="flightaware_photo_link">Photos</td>
+												</tr>
+											</thead>
+											<tbody>
+												<tr id="plane_row_template" class="plane_table_row hidden">
+													<td class="icaoCodeColumn">ICAO</td>
+													<td><img style="width: 20px; height=12px" src="about:blank" alt="Flag"></td>
+													<td>FLIGHT</td>
+													<td>REGISTRATION</td>
+													<td>AIRCRAFT_TYPE</td>
+													<td style="text-align: right">SQUAWK</td>
+													<td style="text-align: right">ALTITUDE</td>
+													<td style="text-align: right">SPEED</td>
+													<td style="text-align: right">VERT_RATE</td>
+													<td style="text-align: right">DISTANCE</td>
+													<td style="text-align: right">TRACK</td>
+													<td style="text-align: right">MSGS</td>
+													<td style="text-align: right">SEEN</td>
+													<td style="text-align: right">RSSI</td>
+													<td style="text-align: right">LAT</td>
+													<td style="text-align: right">LON</td>
+													<td style="text-align: right">DATA_SOURCE</td>
+													<td style="text-align: center">AIRFRAMES_MODE_S_LINK</td>
+													<td style="text-align: center">FLIGHTAWARE_MODE_S_LINK</td>
+													<td style="text-align: center">FLIGHTAWARE_PHOTO_LINK</td>
+												</tr>
+											</tbody>
+										</table>
+										<div>
+											<div class="legend">
+												<div class="legendBox vPosition"></div>
+												<div class="legendTitle">ADS-B</div>
+												<div class="legendBox mlat"></div>
+												<div class="legendTitle">MLAT</div>
+												<div class="legendBox other"></div>
+												<div class="legendTitle">Other</div>
+												<div class="legendBox tisb"></div>
+												<div class="legendTitle">TIS-B</div>
+											</div>
 										</div>
 									</div>
 								</div> <!-- planes_table -->
