--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,8 +8,8 @@
 		<script src="jquery/jquery-ui-1.11.4.min.js"></script>
 		<script src="jquery/plugins/jquery.validate.min.js"></script>
 
-		<link rel="stylesheet" href="ol/ol.css" type="text/css" />
-		<script src="ol/ol.js" type="text/javascript"></script>
+		<link rel="stylesheet" href="ol/v6.3.1/ol.css" type="text/css" />
+		<script src="ol/v6.3.1/ol.js" type="text/javascript"></script>
 
 		<link rel="stylesheet" href="ol/ol-layerswitcher.css" type="text/css"/>
 		<script src="ol/ol-layerswitcher.js" type="text/javascript"></script>
