Move aircraft table styling into css file

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -317,8 +317,8 @@
 									</div>
 								</div>
 
-								<div id="planes_table">
-									<div style="overflow-x: scroll;">
+								<div id="planes_table_container">
+									<div id="planes_table">
 										<table id="tableinfo" style="width: 100%">
 											<thead class="aircraft_table_header">
 												<tr>
@@ -369,7 +369,7 @@
 												</tr>
 											</tbody>
 										</table>
-									</div>
+									</div> <!-- planes_table -->
 									<div>
 										<div class="legend">
 											<div class="legendBox vPosition"></div>
@@ -382,7 +382,7 @@
 											<div class="legendTitle">TIS-B</div>
 										</div>
 									</div>
-								</div> <!-- planes_table -->
+								</div> <!-- planes_table_container -->
 					</div>
 
 
